apps/overlays/linkding/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
  namespace: apps
spec:
  selector:
    matchLabels:
      apps: linkding
  template:
    metadata:
      labels:
        apps: linkding
    spec:
      containers:
        - name: linkding
          image: sissbruecker/linkding
