apps/overlays/linkding/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
  namespace: apps
spec:
  selector:
    apps: linkding
  ports:
    - port: 9090
      targetPort: 9090
