apps/overlays/linkding/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: apps
spec:
  rules:
    # - host: 78.46.148.118
    http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: app-service-linkding
              port:
                number: 80
